--- a/src/pug/includes/page-header.pug
+++ b/src/pug/includes/page-header.pug
@@ -3,7 +3,7 @@
 header.page-header
   h1.visually-hidden Магазин Device
   nav
-    a.link.logo-link(href="#no_scroll")
+    a.link.header-logo-link(href="#no_scroll")
       img(src="img/logos/logo-header.svg" width="145" height="36" alt="Логотип магазина Device.")
     .flex-container
       form(action="https://echo.htmlacademy.ru" method="get")
@@ -40,7 +40,7 @@ header.page-header
                 span Сумма:
                 output 2000 ₽
             a.cart-link-more.place-center.heading-2(href="#no_scroll") #[span Открыть корзину]
-    ul.navigation-list
+    ul.header-navigation-list
       li.catalog-list
         a.heading-2.catalog-heading.catalog-heading-closed(href="#no_scroll") Каталог товаров
         .catalog-container
