--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -2,9 +2,11 @@
 
 doctype html
 html(lang="ru")
-  //- Подключение head
   include ../includes/head.pug
 
   body
-    //- Подключение page-header
     include ../includes/page-header.pug
+
+    main
+
+    include ../includes/page-footer.pug
