--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -7,7 +7,7 @@ $light-gray: #ebebeb;
 $light: #f0f0f0;
 $white: #ffffff;
 $yellow: #ffe17f;
-$yellow-hover: #ffc700;
+$yellow-dark: #ffc700;
 $yellow-light: #ffe17f;
 $purple: #af4fff;
 $error: #ff3d3d;
