--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -37,6 +37,7 @@ body {
   display: flex;
   flex-direction: column;
   min-width: 1240px;
+  min-height: 100%;
   margin: 0;
   font-family: Rubik, sans-serif;
   font-style: normal;
@@ -58,7 +59,6 @@ main {
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
-  color: $black;
 }
 
 .heading-2 {
@@ -68,7 +68,6 @@ main {
   line-height: 21px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  color: $black;
 }
 
 .heading-4 {
@@ -76,7 +75,6 @@ main {
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
-  color: $black;
 }
 
 // Paragraphs
