--- a/src/scss/partials/_page-header.scss
+++ b/src/scss/partials/_page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   position: relative;
   width: 1160px;
-  padding: 46px 60px 134px;
+  padding: 46px 60px 19px;
   margin: 40px auto 0;
   background-color: $yellow;
 
@@ -22,14 +22,17 @@
   }
 }
 
-.logo-link {
+.header-logo-link {
   position: absolute;
   top: -20px;
   left: 60px;
-  display: block;
   width: 145px;
   height: 36px;
   margin-bottom: 30px;
+
+  img {
+    display: block;
+  }
 }
 
 .search-input {
@@ -262,6 +265,7 @@
   padding: 14px;
   margin: 20px;
   text-decoration: none;
+  color: $black;
   background-color: $white;
 
   &:hover {
@@ -299,7 +303,7 @@
   }
 }
 
-.navigation-list {
+.header-navigation-list {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -309,6 +313,7 @@
     a {
       position: relative;
       z-index: 2;
+      color: $black;
     }
   }
 
