--- a/src/pug/includes/page-header.pug
+++ b/src/pug/includes/page-header.pug
@@ -15,7 +15,7 @@ header.page-header
         li.login
           a.link.user-link.login-link(href="#no_scroll") Войти
         li
-          a.link.user-link.logout-link.logout-closed(href="#no_scroll") Выйти
+          a.link.user-link.logout-link.closed(href="#no_scroll") Выйти
         li.compare
           a.link.user-link.compare-link(href="#no_scroll") Сравнить
         li.cart
