--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,7 +6,6 @@ html(lang="ru")
 
   body
     include ../includes/page-header.pug
-
     main
-
+      include ../includes/hero.pug
     include ../includes/page-footer.pug
