--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -9,6 +9,7 @@ $white: #ffffff;
 $yellow: #ffe17f;
 $yellow-dark: #ffc700;
 $yellow-light: #ffe17f;
+$sunglow: #ffcc33;
 $purple: #af4fff;
 $error: #ff3d3d;
 $alert: #fd912e;
