--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,7 @@
 @import "partials/variables";
+@import "partials/mixins";
 @import "partials/general";
 @import "partials/helper-classes";
 @import "partials/page-header";
 @import "partials/page-footer";
+@import "partials/hero";
