--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -53,7 +53,6 @@ main {
 }
 
 //Heading
-
 .heading-1 {
   font-family: Raleway;
   font-weight: 800;
@@ -96,12 +95,65 @@ main {
   }
 
   &:focus {
-    outline: 2px solid $purple;
-    outline-offset: 2px;
+    @include focus-default;
   }
 
   &:active {
     outline: none;
     opacity: 0.3;
+  }
+}
+
+// Buttons
+.buttons-streak {
+  @include button-default;
+  position: relative;
+  padding: 10px 10px 9px;
+  font-family: Raleway;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: $black;
+  text-align: center;
+
+  &::before {
+    position: absolute;
+    z-index: -10;
+    top: 50%;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 8px;
+    background-color: $yellow-light;
+    transform: translateY(-50%);
+  }
+
+  &:hover {
+    background-color: $yellow-light;
+  }
+
+  &:focus {
+    @include focus-default;
+  }
+
+  &:active {
+    outline: none;
+    background-color: $sunglow;
+  }
+
+  &:disabled {
+    opacity: 0.3;
+
+    &:hover {
+      background-color: transparent;
+    }
+
+    &:active {
+      outline: none;
+      background-color: transparent;
+    }
   }
 }
