Add categories section

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,4 +8,6 @@ html(lang="ru")
     include ../includes/page-header.pug
     main
       include ../includes/hero.pug
+      include ../includes/categories.pug
+
     include ../includes/page-footer.pug
