--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -14,3 +14,6 @@ $purple: #af4fff;
 $error: #ff3d3d;
 $alert: #fd912e;
 $success: #08af00;
+
+//Categories
+$categories: vr-glasses, monopods, cameras, bracelets, watches, drones;
