--- a/src/scss/partials/_hero.scss
+++ b/src/scss/partials/_hero.scss
@@ -4,7 +4,7 @@
   grid-template-columns: repeat(2, 560px);
   column-gap: 40px;
   width: 1160px;
-  margin: -35px auto 0;
+  margin: -35px auto 70px;
   background: linear-gradient($yellow, $yellow) no-repeat left -410px;
 
   .heading-1 {
@@ -125,6 +125,7 @@
     @include button-default;
     height: 12px;
     width: 12px;
+    padding: 0;
     border-radius: 50%;
     border: 2px solid $black;
   }
