Add features section

--- a/src/pug/includes/hero.pug
+++ b/src/pug/includes/hero.pug
@@ -1,5 +1,3 @@
-//- includes/hero.pug
-
 section.hero
   h2.visually-hidden Превью товаров
   .slider
@@ -17,7 +15,7 @@ section.hero
       article
         p.heading-1 Порхает как бабочка, жалит как пчела!
         p.article-text Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
-        a.buttons-streak(href="#no_scroll") Подробнее
+        a.button-streak(href="#no_scroll") Подробнее
         dl
           .group
             dt 800 м
@@ -29,7 +27,7 @@ section.hero
       article
         p.heading-1 Худеем правильно!
         p.article-text Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
-        a.buttons-streak(href="#no_scroll") Подробнее
+        a.button-streak(href="#no_scroll") Подробнее
         dl
           .group
             dt 48 часов
@@ -38,7 +36,7 @@ section.hero
       article
         p.heading-1 Делай селфи, как Бен Стиллер!
         p.article-text Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
-        a.buttons-streak(href="#no_scroll") Подробнее
+        a.button-streak(href="#no_scroll") Подробнее
         dl
           .group
             dt 8,5 м
