--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,5 +1,3 @@
-//- index.pug
-
 doctype html
 html(lang="ru")
   include ../includes/head.pug
@@ -9,5 +7,6 @@ html(lang="ru")
     main
       include ../includes/hero.pug
       include ../includes/categories.pug
+      include ../includes/features.pug
 
     include ../includes/page-footer.pug
