--- a/src/pug/includes/categories.pug
+++ b/src/pug/includes/categories.pug
@@ -1,6 +1,5 @@
-//- includes/category.pug
-
 section.categories
+  h2.visually-hidden Категории товаров
   ul
     li
       a.vr-glasses(href="#no_scroll")
