--- a/src/scss/partials/_categories.scss
+++ b/src/scss/partials/_categories.scss
@@ -14,6 +14,7 @@
   a {
     display: block;
     width: 160px;
+    min-height: 252px;
     font-family: Raleway;
     font-weight: 800;
     font-size: 18px;
