Add info about company section

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,5 +8,6 @@ html(lang="ru")
       include ../includes/hero.pug
       include ../includes/categories.pug
       include ../includes/features.pug
+      include ../includes/info.pug
 
     include ../includes/page-footer.pug
