--- a/src/scss/partials/_features.scss
+++ b/src/scss/partials/_features.scss
@@ -1,6 +1,7 @@
-.features {
+.features-list {
   padding-bottom: 72px;
   background: linear-gradient($light, $light) no-repeat left 102px;
+  margin-bottom: 70px;
 }
 
 .features-container {
@@ -38,9 +39,14 @@
     width: 100%;
     color: $yellow-light;
     background-color: $black;
+    transition: padding 0.2s ease-out 0.3s;
 
     &::before {
       display: none;
+    }
+
+    &:hover {
+      padding-left: 35px;
     }
   }
 }
@@ -93,7 +99,7 @@
   }
 }
 
-.features-list {
+.features-description {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -103,5 +109,74 @@
   li {
     font-size: 18px;
     line-height: 30px;
+  }
+}
+
+.rare-goods {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 1160px;
+  height: 100px;
+  margin: 0 auto;
+  background-color: $light;
+  margin-bottom: 70px;
+  font-family: Raleway;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: $black;
+  text-decoration: none;
+
+  &::before {
+    content: '';
+    height: 100px;
+    width: 125px;
+    background-color: $yellow-light;
+    background-image: url(../img/icons/rare-goods.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .tooltip {
+    height: 40px;
+    width: 40px;
+    background-color: rgba(220, 220, 220, 0.5);
+    color: $black;
+    border-radius: 50%;
+    margin: 0 43px 0 35px;
+
+    svg {
+      opacity: 0.3;
+    }
+  }
+
+  p {
+    margin: 2px 0 0;
+  }
+
+  &:hover {
+    &::before {
+      background-color: $yellow-dark;
+    }
+
+    .tooltip {
+      svg {
+        opacity: 1;
+      }
+
+    }
+  }
+
+  &:focus {
+    @include focus-default;
+  }
+
+  &:active {
+    outline: none;
+    opacity: 0.3;
   }
 }
