Complete index page

--- a/src/pug/includes/page-header.pug
+++ b/src/pug/includes/page-header.pug
@@ -1,5 +1,5 @@
 header.page-header
-  h1.visually-hidden Магазин Device
+  h2.visually-hidden Навигация по сайту
   nav
     a.link.header-logo-link(href="#no_scroll")
       img(src="img/logos/logo-header.svg" width="145" height="36" alt="Логотип магазина Device.")
@@ -8,7 +8,7 @@ header.page-header
         label.search-label
           input.search-input#search(type="search" name="search-page" placeholder="Поиск по сайту" required)
           span.visually-hidden Поиск по сайту
-        button.search-button.place-center(type="submit") #[span Найти]
+        button.search-button.button-transparent.place-center(type="submit") #[span Найти]
       ul.navigation-user
         li.login
           a.link.user-link.login-link(href="#no_scroll") Войти
