--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -3,11 +3,14 @@ html(lang="ru")
   include ../includes/head.pug
 
   body
+    h1.visually-hidden Магазин Device
     include ../includes/page-header.pug
+
     main
       include ../includes/hero.pug
       include ../includes/categories.pug
       include ../includes/features.pug
       include ../includes/info.pug
+      include ../includes/newsletter.pug
 
     include ../includes/page-footer.pug
