--- a/src/scss/general/_variables.scss
+++ b/src/scss/general/_variables.scss
@@ -2,6 +2,7 @@
 $black: #000000;
 $dark: #444444;
 $nero: #1a1a1a;
+$weathered-stone: #c4c4c4;
 $gray: #dcdcdc;
 $light-gray: #ebebeb;
 $light: #f0f0f0;
