--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,10 +1,11 @@
-@import "partials/variables";
-@import "partials/mixins";
-@import "partials/general";
-@import "partials/helper-classes";
-@import "partials/page-header";
-@import "partials/page-footer";
-@import "partials/hero";
-@import "partials/categories";
-@import "partials/features";
-@import "partials/info";
+@import "general/variables";
+@import "general/mixins";
+@import "general/general";
+@import "general/helper-classes";
+@import "components/page-header";
+@import "components/page-footer";
+@import "components/hero";
+@import "components/categories";
+@import "components/features";
+@import "components/info";
+@import "components/newsletter";
