--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -5,7 +5,7 @@ head
 
   title Device
 
-  link(rel="icon" href="img/favicon.ico" type="image/x-icon")
+  link(rel="icon" href="favicon.ico" type="image/x-icon")
   link(rel="icon" href="img/favicon-32x32.png" sizes="32x32" type="image/png")
 
   link(rel="stylesheet" href="css/styles.css")
