--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -3,8 +3,8 @@
   margin: 0 auto 70px;
 
   ul {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(6, 160px);
     gap: 40px;
     padding: 0;
     margin: 0;
