Complete monopods catalog

--- a/src/pug/includes/categories.pug
+++ b/src/pug/includes/categories.pug
@@ -5,7 +5,7 @@ section.categories
       a.vr-glasses(href="#no_scroll")
         span Виртуальная реальность
     li
-      a.monopods(href="#no_scroll")
+      a.monopods(href="catalog-monopods.html")
         span Моноподы #[br] для селфи
     li
       a.cameras(href="#no_scroll")
