--- a/src/pug/includes/hero.pug
+++ b/src/pug/includes/hero.pug
@@ -8,8 +8,8 @@ section.hero
         img(src="img/hero/product-2.svg" width="560" height="560" alt="Фитнес-браслеты" aria-hidden="true")
       li.closed#product-3
         img(src="img/hero/product-3.svg" width="560" height="560" alt="Палка для селфи." aria-hidden="true")
-    button.link.button-previous(type="button" aria-label="Следующее фото")
-    button.link.button-next(type="button" aria-label="Предыдущее фото")
+    button.states-default.button-previous(type="button" aria-label="Следующее фото")
+    button.states-default.button-next(type="button" aria-label="Предыдущее фото")
   ol.articles
     li#article-1(data-count="01")
       article
@@ -49,8 +49,8 @@ section.hero
             dd Материал
   ol.buttons
     li
-      button.link.active#button-1(type="button" aria-label="Фото 1.")
+      button.states-default.active#button-1(type="button" aria-label="Фото 1.")
     li
-      button.link#button-2(type="button" aria-label="Фото 2.")
+      button.states-default#button-2(type="button" aria-label="Фото 2.")
     li
-      button.link#button-3(type="button" aria-label="Фото 3.")
+      button.states-default#button-3(type="button" aria-label="Фото 3.")
