--- a/src/pug/pages/catalog-monopods.pug
+++ b/src/pug/pages/catalog-monopods.pug
@@ -1,3 +1,5 @@
+- const page = "monopods"
+
 doctype html
 html(lang="ru")
   include ../includes/head.pug
@@ -6,5 +8,6 @@ html(lang="ru")
     include ../includes/page-header.pug
 
     main
+      include ../includes/monopods.pug
 
     include ../includes/page-footer.pug
