--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -74,7 +74,7 @@
     z-index: 20;
   }
 
-  .button-streak {
+  a {
     max-width: 220px;
     margin-bottom: 50px;
   }
@@ -128,6 +128,7 @@
     padding: 0;
     border-radius: 50%;
     border: 2px solid $black;
+    user-select: none;
   }
 
   .active {
