--- a/src/scss/general/_variables.scss
+++ b/src/scss/general/_variables.scss
@@ -6,6 +6,7 @@ $weathered-stone: #c4c4c4;
 $gray: #dcdcdc;
 $light-gray: #ebebeb;
 $light: #f0f0f0;
+$mercury: #e5e5e5;
 $white: #ffffff;
 $yellow: #ffe17f;
 $yellow-dark: #ffc700;
