--- a/src/pug/includes/page-footer.pug
+++ b/src/pug/includes/page-footer.pug
@@ -1,7 +1,7 @@
 footer.page-footer
   .footer-container
     h2.visually-hidden Контакты и навигация по сайту
-    a.link.footer-logo-link(href="#no_scroll")
+    a.states-default.footer-logo-link(href="#no_scroll")
       img(src="img/logos/logo-footer.svg" width="145" height="36" alt="Логотип магазина Device.")
     p.address Санкт-Петербург, набережная реки Карповки, 5, литера П.
     ul.footer-navigation-list
