--- a/src/scss/components/_info.scss
+++ b/src/scss/components/_info.scss
@@ -32,7 +32,6 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
-    letter-spacing: -0.02em;
     color: $black;
 
     &::before {
@@ -56,7 +55,7 @@
 .about {
   margin-right: 147px;
 
-  .button-streak {
+  button {
     min-width: 270px;
   }
 }
@@ -93,7 +92,7 @@
     }
   }
 
-  .button-streak {
+  button {
     min-width: 259px;
   }
 }
