--- a/src/scss/components/_page-header.scss
+++ b/src/scss/components/_page-header.scss
@@ -14,11 +14,11 @@
     margin: 0;
     list-style: none;
   }
+}
 
-  .flex-container {
-    display: flex;
-    margin-bottom: 30px;
-  }
+.header-navigation-site {
+  display: flex;
+  margin-bottom: 30px;
 }
 
 .header-logo-link {
@@ -37,7 +37,7 @@
   border: 2px solid $black;
   border-right: none;
   border-radius: 50px 0px 0px 50px;
-  font-family: Rubik;
+  font-family: inherit;
   font-size: 16px;
   line-height: 20px;
   color: $black;
@@ -47,7 +47,7 @@
   background-position: left 14px center;
 
   &::placeholder {
-    font-family: Rubik;
+    font-family: inherit;
     font-size: 16px;
     line-height: 20px;
     color: $black;
@@ -77,12 +77,13 @@
   padding: 8 14px;
   border: 2px solid $black;
   border-radius: 0px 50px 50px 0px;
-  font-family: Rubik;
+  font-family: inherit;
   font-size: 16px;
   line-height: 20px;
+  user-select: none;
 }
 
-.navigation-user {
+.header-navigation-user {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -99,6 +100,10 @@
     font-size: 18px;
     line-height: 30px;
   }
+}
+
+.login {
+  margin-right: 13px;
 }
 
 .login-link {
@@ -209,6 +214,7 @@
     background-image: url(../img/icons/button-closed.svg);
     background-repeat: no-repeat;
     background-position: center;
+    user-select: none;
   }
 }
 
